# repo_template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  README_cn.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.claude/commands/: pr-review.md  update-docs.md  update-test.md
.devcontainer/: Dockerfile  README.md  README.zh-TW.md  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: auto_labeler.yml  build.yml  build_executable.yml  build_image.yml  build_package.yml  build_release.yml  code-quality-check.yml  code_scan.yml  dependabot_auto_merge.yml  dependency-review.yml  deploy.yml  deploy_docs.yml  pre-commit-updater.yml  release_drafter.yml  secret_scan.yml  semantic-pull-request.yml  test.yml
docker/: Dockerfile
docs/: README.zh-TW.md  index.md  index_cn.md
docs/installation/: index.md
scripts/: gen_docs.py
src/repo_template/: __init__.py  cli.py
tests/: test_hello.py
